Salesforce/main/default/main/default/objects/Market_Share__c/fields/Brasmax__c.field-meta.xml
<CustomField>
    <fullName>Brasmax__c</fullName>
    <label>Brasmax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>