Salesforce/main/default/main/default/objects/Market_Share__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>La cuenta que es dueña de estos valores</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Share de Comercialização x Safra</relationshipLabel>
    <relationshipName>Market_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>