Salesforce/main/default/main/default/objects/Market_Share__c/fields/Data_da_informacion__c.field-meta.xml
<CustomField>
    <fullName>Data_da_informacion__c</fullName>
    <label>Data da informação</label>
    <type>Date</type>
</CustomField>