Salesforce/main/default/main/default/objects/Market_Share__c/fields/FT_Sementes__c.field-meta.xml
<CustomField>
    <fullName>FT_Sementes__c</fullName>
    <label>FT Sementes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>