Salesforce/main/default/main/default/objects/Market_Share__c/fields/Fundacep__c.field-meta.xml
<CustomField>
    <fullName>Fundacep__c</fullName>
    <label>Fundacep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>