Salesforce/main/default/main/default/objects/Market_Share__c/fields/IGRA__c.field-meta.xml
<CustomField>
    <fullName>IGRA__c</fullName>
    <label>IGRA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>