Salesforce/main/default/main/default/objects/Market_Share__c/fields/Nidera__c.field-meta.xml
<CustomField>
    <fullName>Nidera__c</fullName>
    <label>Nidera</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>