Salesforce/main/default/main/default/objects/Market_Share__c/fields/Outros__c.field-meta.xml
<CustomField>
    <fullName>Outros__c</fullName>
    <label>Outros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>