Salesforce/main/default/main/default/objects/Market_Share__c/fields/Responsavel_pela_informacion__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_pela_informacion__c</fullName>
    <label>Responsável pela informação</label>
    <length>150</length>
    <type>Text</type>
</CustomField>