Salesforce/main/default/main/default/objects/Market_Share__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>07/08</fullName>
            </value>
            <value>
                <fullName>08/09</fullName>
            </value>
            <value>
                <fullName>09/10</fullName>
            </value>
            <value>
                <fullName>10/11</fullName>
            </value>
            <value>
                <fullName>10/10</fullName>
            </value>
            <value>
                <fullName>09/09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>